--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ version = '0.0.1-SNAPSHOT'
 
 sonarqube {
 	properties {
-		property "sonar.projectKey", "earelin_alexandria"
+		property "sonar.projectKey", "earelin_alexandria-reactive"
 		property "sonar.organization", "earelin"
 		property "sonar.host.url", "https://sonarcloud.io"
 		property 'sonar.java.checkstyle.reportPaths', 'build/reports/checkstyle/main.xml,' +
